{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 358,
  "lineage": "3a4df99d-fc93-8f39-5004-c4639a28fceb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:network-acl/acl-0ad57582f21c13961",
            "default_network_acl_id": "acl-0ad57582f21c13961",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ad57582f21c13961",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264176381",
            "subnet_ids": [
              "subnet-03d259508e51dd51c",
              "subnet-06c9bb0119257060d",
              "subnet-0acd1e0cbea8ceb58",
              "subnet-0e996efdbf6b8f322"
            ],
            "tags": {
              "Name": "uat-extramile-default",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-default",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:route-table/rtb-0171b6a2ba4af7212",
            "default_route_table_id": "rtb-0171b6a2ba4af7212",
            "id": "rtb-0171b6a2ba4af7212",
            "owner_id": "058264176381",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uat-extramile-default",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-default",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:security-group/sg-06acc5c323b99205e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06acc5c323b99205e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264176381",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uat-extramile-default",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-default",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00efb4959c2e4e372",
            "association_id": "eipassoc-0d4201bd7b9d94eae",
            "domain": "vpc",
            "id": "eipalloc-00efb4959c2e4e372",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0446603140ba8f9ee",
            "private_dns": "ip-10-0-101-52.ap-northeast-1.compute.internal",
            "private_ip": "10.0.101.52",
            "public_dns": "ec2-54-150-39-46.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.150.39.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uat-extramile-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:internet-gateway/igw-04a1306c0c2abcedc",
            "id": "igw-04a1306c0c2abcedc",
            "owner_id": "058264176381",
            "tags": {
              "Name": "uat-extramile",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00efb4959c2e4e372",
            "association_id": "eipassoc-0d4201bd7b9d94eae",
            "connectivity_type": "public",
            "id": "nat-0c6b97f9b2a7ef607",
            "network_interface_id": "eni-0446603140ba8f9ee",
            "private_ip": "10.0.101.52",
            "public_ip": "54.150.39.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d259508e51dd51c",
            "tags": {
              "Name": "uat-extramile-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-006e4be2ba5c725871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c6b97f9b2a7ef607",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006e4be2ba5c72587",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04a1306c0c2abcedc",
            "id": "r-rtb-01ccf5894bb8f36861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ccf5894bb8f3686",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:route-table/rtb-006e4be2ba5c72587",
            "id": "rtb-006e4be2ba5c72587",
            "owner_id": "058264176381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6b97f9b2a7ef607",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-extramile-private",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-private",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:route-table/rtb-01ccf5894bb8f3686",
            "id": "rtb-01ccf5894bb8f3686",
            "owner_id": "058264176381",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a1306c0c2abcedc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-extramile-public",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-public",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09831339f57fdbbad",
            "route_table_id": "rtb-006e4be2ba5c72587",
            "subnet_id": "subnet-0acd1e0cbea8ceb58"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f870799c04d8c5a",
            "route_table_id": "rtb-006e4be2ba5c72587",
            "subnet_id": "subnet-0e996efdbf6b8f322"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001dd8d9b00f37da0",
            "route_table_id": "rtb-01ccf5894bb8f3686",
            "subnet_id": "subnet-03d259508e51dd51c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b78d61a0171ae86",
            "route_table_id": "rtb-01ccf5894bb8f3686",
            "subnet_id": "subnet-06c9bb0119257060d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:subnet/subnet-0acd1e0cbea8ceb58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acd1e0cbea8ceb58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264176381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-extramile-private-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-private-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:subnet/subnet-0e996efdbf6b8f322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e996efdbf6b8f322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264176381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-extramile-private-ap-northeast-1c",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-private-ap-northeast-1c",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:subnet/subnet-03d259508e51dd51c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d259508e51dd51c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264176381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-extramile-public-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-public-ap-northeast-1a",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:subnet/subnet-06c9bb0119257060d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c9bb0119257060d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264176381",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-extramile-public-ap-northeast-1c",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile-public-ap-northeast-1c",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "vpc_id": "vpc-012d83645192c8ce2"
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058264176381:vpc/vpc-012d83645192c8ce2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad57582f21c13961",
            "default_route_table_id": "rtb-0171b6a2ba4af7212",
            "default_security_group_id": "sg-06acc5c323b99205e",
            "dhcp_options_id": "dopt-03131e43d2220ef44",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012d83645192c8ce2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0171b6a2ba4af7212",
            "owner_id": "058264176381",
            "tags": {
              "Name": "uat-extramile",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "uat-extramile",
              "name": "extramile-uat",
              "project": "extramile",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}